Fix build issues

--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -22,7 +22,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_octagon" />
 
 
@@ -64,7 +64,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_speedometer" />
 
 
@@ -106,7 +106,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_volume_up_black_24dp" />
 
 
@@ -157,7 +157,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_ruler" />
 
 
@@ -197,7 +197,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_style_white_24dp" />
 
 
@@ -238,7 +238,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_text_fields_black_24dp" />
 
 
@@ -280,7 +280,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_opacity_black_24dp" />
 
 
@@ -321,7 +321,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_track_changes_black_24dp" />
 
 
