--- a/app/src/main/res/layout/fragment_advanced.xml
+++ b/app/src/main/res/layout/fragment_advanced.xml
@@ -24,7 +24,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_apps_black_24dp" />
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_map_white_24dp" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
@@ -100,7 +100,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_view_agenda_white_24dp" />
 
         <TextView
@@ -130,7 +130,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_delete_sweep_black_24dp" />
 
         <TextView
@@ -158,7 +158,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="32dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_bug_report_black_24dp" />
 
 
