--- a/app/src/main/res/layout/fragment_permissions.xml
+++ b/app/src/main/res/layout/fragment_permissions.xml
@@ -164,7 +164,7 @@
             android:layout_width="40dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
-            android:tint="#8a000000"
+            app:tint="#8a000000"
             app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />
 
         <TextView
